# DXL_0702-AsterDrive

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.zh.md  config.example.toml  docker-compose.yml
.cargo/: audit.toml
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  qa.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: audit.yml  docker-image.yml  e2e.yml  frontend-e2e.yml  frontend.yml  rust-release.yml  rust.yml  vitepress.yml
api-docs-macros/: Cargo.toml
api-docs-macros/src/: lib.rs
developer-docs/: README.md  architecture.md  testing.md
developer-docs/api/: admin.md  auth.md  files.md  health.md  index.md  public.md  shares.md  teams.md  webdav.md  wopi.md
docs/: architecture.md  index.md  package.json
docs/.vitepress/: config.ts
docs/api/: admin.md  auth.md  batch.md  files.md  folders.md  health.md  index.md  properties.md  shares.md  trash.md  webdav.md
docs/config/: auth.md  cache.md  database.md  index.md  logging.md  mail.md  rate-limit.md  runtime.md  server.md  storage.md  webdav.md
docs/deployment/: backup.md  docker.md  frontend-assets.md  index.md  ops-cli.md  performance-benchmarking.md  proxy.md  reverse-proxy.md  runtime-behavior.md  systemd.md  troubleshooting.md  upgrade.md
docs/guide/: about.md  admin-console.md  core-workflows.md  custom-frontend.md  editing.md  errors.md  getting-started.md  installation.md  remote-nodes.md  sharing.md  upload-modes.md  user-guide.md
frontend-panel/: .gitignore  biome.json  index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend-panel/e2e/: 00-auth.spec.ts  access.spec.ts  admin.spec.ts  asterdrive.spec.ts  file-browser.spec.ts  navigation.spec.ts  shares.spec.ts  webdav.spec.ts
frontend-panel/scripts/: extract-pdfjs-cmaps.mjs  run-e2e-server.sh
frontend-panel/src/: App.test.tsx  App.tsx  index.css  main.tsx
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250320_000001_create_table.rs  m20250321_000002_create_shares.rs  m20250321_000003_chunked_upload.rs  m20250321_000004_webdav_accounts.rs  m20250321_000005_webdav_root_folder.rs  m20250321_000006_entity_properties.rs  m20250321_000009_webdav_locks.rs  m20250321_000010_file_versions.rs  m20250321_000011_resource_locks.rs  m20250322_000001_system_config_metadata.rs  m20250322_000002_config_source_namespace.rs  m20260324_000001_s3_multipart_upload.rs  m20260325_000001_upload_session_file_id.rs  m20260327_000001_add_share_lookup_indexes.rs  m20260329_000001_create_user_profiles.rs  m20260329_000002_add_user_profile_display_name.rs  m20260329_000003_add_maintenance_indexes.rs  m20260330_000001_add_directory_lookup_indexes.rs  m20260330_000002_add_search_name_indexes.rs  m20260410_000001_create_background_tasks.rs  m20260412_000002_drop_legacy_avatar_policy_id.rs  m20260412_000003_drop_legacy_user_storage_policies.rs  m20260413_000001_add_files_live_name_unique_index.rs  m20260413_000004_add_user_profile_wopi_user_info.rs  m20260415_000005_add_background_task_steps.rs  m20260416_000001_add_shares_exact_target_check.rs  m20260420_000001_create_auth_sessions.rs  m20260420_000002_create_remote_nodes.rs  m20260424_000001_normalize_thumbnail_metadata.rs  m20260424_000002_normalize_beta_compat_data.rs
src/: alloc.rs  cli.rs  errors.rs  lib.rs  main.rs  metrics.rs  types.rs
src/api/: common.rs  error_code.rs  follower.rs  mod.rs  openapi.rs  pagination.rs  primary.rs  response.rs
src/cache/: memory.rs  mod.rs  noop.rs  redis_cache.rs
src/cli/: config.rs  database_migration.rs  doctor.rs  node.rs  shared.rs
src/config/: auth_runtime.rs  avatar.rs  bool_like.rs  branding.rs  cors.rs  definitions.rs  loader.rs  mail.rs  media_processing.rs  mod.rs  node_mode.rs  operations.rs  runtime_config.rs  schema.rs  site_url.rs  system_config.rs  wopi.rs
src/db/: connection.rs  mod.rs  retry.rs
src/entities/: audit_log.rs  auth_session.rs  background_task.rs  entity_property.rs  file.rs  file_blob.rs  file_version.rs  folder.rs  follower_enrollment_session.rs  mail_outbox.rs  managed_follower.rs  master_binding.rs  mod.rs  resource_lock.rs  share.rs  storage_policy.rs  system_config.rs  upload_session.rs  upload_session_part.rs  user.rs  user_profile.rs  user_storage_policy.rs  webdav_account.rs  webdav_lock.rs
src/runtime/: logging.rs  mod.rs  panic.rs  shutdown.rs  startup.rs  tasks.rs
src/services/: admin_service.rs  audit_service.rs  auth_service.rs  batch_service.rs  config_service.rs  direct_link_service.rs  file_service.rs  folder_service.rs  integrity_service.rs  lock_service.rs  mail_outbox_service.rs  mail_service.rs  mail_template.rs  maintenance_service.rs  managed_follower_enrollment_service.rs  managed_follower_service.rs  managed_ingress_profile_service.rs  master_binding_service.rs  media_processing_service.rs  mod.rs  policy_service.rs  preview_app_service.rs  preview_link_service.rs  profile_service.rs  property_service.rs  readiness_service.rs  remote_enrollment_service.rs  remote_node_service.rs  search_service.rs  share_service.rs  storage_change_service.rs  stream_ticket_service.rs  task_service.rs  team_service.rs  (+12 more)
tests/: api_integration.rs  generate_openapi.rs  test_admin.rs  test_audit.rs  test_auth.rs  test_batch.rs  test_cli.rs  test_cors.rs  test_database_backends.rs  test_db_indexes.rs  test_directory_upload.rs  test_edit.rs  test_errors.rs  test_files.rs  test_folders.rs  test_gravatar_config.rs  test_health.rs  test_local_driver_security.rs  test_maintenance.rs  test_middleware.rs  test_pagination.rs  test_policies.rs  test_preferences.rs  test_public_preview_apps.rs  test_public_thumbnail_support.rs  test_refactor_contracts.rs  test_remote_storage.rs  test_s3.rs  test_search.rs  test_security_fixes.rs  test_services.rs  test_shares.rs  test_tasks.rs  test_team_space.rs  test_teams.rs  test_thumbnail.rs  test_trash.rs  test_upload.rs  test_user_management.rs  test_webdav.rs  (+6 more)
(+796 files in other folders)
