[package]
name = "aster_drive"
version = "0.0.0"
description = "A self-hosted cloud storage solution."
authors = ["AptS-1547 <apts-1547@esaps.net>"]
repository = "https://github.com/AptS-1547/AsterDrive"
edition = "2024"
rust-version = "1.91.1"

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
codegen-units = 1
debug = true
strip = false
lto = false

[workspace]
members = [".", "migration"]

[features]
default = ["server"]
server = []
cli = ["server", "dep:clap"]
metrics = ["server", "dep:prometheus"]
full = ["server", "cli", "metrics"]

[dependencies]
actix-cors = "0.7"
actix-governor = "0.10"
actix-multipart = "0.7"
actix-web = { version = "4.13.0", features = ["compress-brotli", "compress-gzip"] }
argon2 = "0.5.3"
async-trait = "0.1"
aws-config = "1.8.13"
aws-credential-types = { version = "1.2.11", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.122.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"], optional = true }
config = { version = "0.15", default-features = false, features = ["toml"] }
dashmap = "6"
dotenvy = "0.15"
futures = "0.3"
governor = "0.10"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
migration = { version = "0.1.0", path = "migration" }
mime_guess = "2"
moka = { version = "0.12.14", features = ["future"] }
num_cpus = "1.17.0"
paste = "1.0.15"
prometheus = { version = "0.14", optional = true, default-features = false }
rand = { version = "0.10.0", default-features = false, features = ["std", "std_rng", "thread_rng"] }
redis = { version = "1.0.5", features = ["connection-manager", "tokio-comp", "tokio-rustls-comp"] }
rust-embed = "8"
rustls = "0.23.37"
sea-orm = { version = "~2.0.0-rc.37", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
toml = "1.0"
tracing = { version = "0.1.44", default-features = false}
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
utoipa = { version = "5.4.0", features = ["chrono", "actix_extras", "repr"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
chrono = "0.4"
