[package]
name = "aster_drive"
version = "0.0.1-alpha.13"
description = "A self-hosted cloud storage solution."
authors = [
    "AptS-1547 <apts-1547@esaps.net>",
    "AptS-1548 <apts-1548@esaps.net>",
    "AptS-1738 <apts-1738@esaps.net>",
]
repository = "https://github.com/AptS-1547/AsterDrive"
edition = "2024"
rust-version = "1.91.1"

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
codegen-units = 1
debug = true
strip = false
lto = false

[profile.release-performance]
inherits = "release"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = [".", "migration", "api-docs-macros"]

[features]
default = ["server"]
server = []
cli = ["server", "dep:clap"]
metrics = ["server", "dep:prometheus", "dep:sysinfo"]
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui", "api-docs-macros/openapi"]
full = ["server", "cli", "metrics", "openapi"]

[dependencies]
actix-cors = "0.7"
actix-governor = "0.10"
actix-multipart = "0.7"
actix-web = { version = "4.13.0", features = ["compress-brotli", "compress-gzip"] }
api-docs-macros = { path = "api-docs-macros" }
argon2 = "0.5.3"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
aws-credential-types = { version = "1.2.14", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.127.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"], optional = true }
config = { version = "0.15", default-features = false, features = ["toml"] }
dashmap = "6"
dav-server = { version = "0.11", features = ["actix-compat"] }
dotenvy = "0.15"
futures = "0.3"
http = "1"
http-body = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
governor = "0.10"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
migration = { version = "0.1.0", path = "migration" }
mime_guess = "2"
moka = { version = "0.12.15", features = ["future"] }
md-5 = "0.11.0"
num_cpus = "1.17.0"
paste = "1.0.15"
prometheus = { version = "0.14", optional = true, default-features = false }
sysinfo = { version = "0.38", optional = true, default-features = false, features = ["system"] }
rand = { version = "0.10.0", default-features = false, features = ["std", "std_rng", "thread_rng"] }
redis = { version = "1.1.0", features = ["connection-manager", "tokio-comp", "tokio-rustls-comp"] }
rust-embed = "8"
sea-orm = { version = "~2.0.0-rc.37", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
sha2 = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "1.1"
tracing = { version = "0.1.44", default-features = false}
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "env-filter", "fmt", "json"] }
utoipa = { version = "5.4.0", features = ["chrono", "actix_extras", "repr"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"], optional = true }
uuid = { version = "1", features = ["v4"] }
xmltree = "0.12"

[dev-dependencies]
aws-smithy-http-client = { version = "1.1.12", features = ["test-util"] }
aws-smithy-types = "1.4.7"
testcontainers = "0.27"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.13"
urlencoding = "2"

[build-dependencies]
chrono = "0.4"

[lib]
doctest = false
