[package]
name = "api-docs-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
proc-macro = true

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
proc-macro2 = "1"
quote = "1"
utoipa = { version = "5.4.0", features = ["chrono", "actix_extras", "repr"], optional = true }
